--- a/index.html
+++ b/index.html
@@ -24,8 +24,25 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>The Friendly Guide to IFRS 17</section>
+        <section>
+          <p>
+            You can always refer to the
+            <a target="_blank" href="https://www.ifrs.org/issued-standards/list-of-standards/ifrs-17-insurance-contracts/">IFRS 17 Insurance Contracts</a>
+            if you like reading boring paragraphs.
+          </p>
+          <blockquote>
+          blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+          </blockquote>
+        </section>
+        <section>
+          Let's get to the point, with numbers.
+        </section>
+        <section>
+          You are probably familiar with how the reserves control the profit of an insurance contract:
+        </section>
 			</div>
 		</div>
 
