Add page numbers #2

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ You are probably familiar with how the reserves control the profit of an insuran
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
         history: true,
+        slideNumber: true,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
