Recap and key questions for CSM

--- a/index.html
+++ b/index.html
@@ -93,20 +93,31 @@
           </script>
         </section>
         <section>
-          <h2>Recap on CSM</h2>
-          <p>Profits are driven by the amortization of the <span class="csm">CSM (Contractual Service Margin).</span></p>
+          <h2>Recap on CSM #1</h2>
+          <p><span class="csm">CSM</span>, Contractual Service Margin, is a liability.</p>
+        </section>
+        <section>
+          <h2>Recap on CSM #2</h2>
+          <p>Profits are driven by the amortization of the <span class="csm">CSM</span>.</p>
+        </section>
+        <section>
+          <h2>Recap on CSM #3</h2>
           <p><span class="csm">CSM</span> reduces from 120 to 0 in 3 years to release profit.</p>
+        </section>
+        <section>
           <p>Ready to go deeper on <span class="csm">CSM</span>?</p>
         </section>
         <section>
-          <ol>
-            <li>How to determine the CSM release pattern?</li>
-            <li>How to calculate the initial CSM balance?</li>
-            <li>How to handle the time value of money?</li>
-          </ol>
+          <p>Q1: How to determine the CSM release pattern?</p>
+          <p>From 120 to 0</p>
         </section>
         <section>
-          <p>Q1: </p>
+          <p>Q2: How to calculate the initial CSM balance?</p>
+        </section>
+        <section>
+          <p>Q3: How to handle the time value of money?</p>
+        </section>
+        <section>
           <ol>
             <li>P&L statement / B/S example</li>
             <li>Experience variance</li>
