Revise descriptions about CSM vs reserve

--- a/index.html
+++ b/index.html
@@ -80,14 +80,16 @@
               <p class="fragment fade-in-then-out replace-div" data-fragment-index="1">Under IFRS 17, imagine profit = <span class="csm">change in CSM</span>.</p>
               <p class="fragment fade-in-then-out replace-div" data-fragment-index="2">The CSM is a liability, with beginning balance = 120.</p>
               <p class="fragment fade-in-then-out replace-div" data-fragment-index="3">120 = the total profit (premium - claims).</p>
-              <p class="fragment fade-in replace-div" data-fragment-index="4">The reserves do not contribute to the total profit.</p>
+              <p class="fragment fade-in-then-out replace-div" data-fragment-index="4">The reserves do not contribute to the total profit.</p>
+              <p class="fragment fade-in-then-out replace-div" data-fragment-index="5">In fact there are no more "reserves" under IFRS 17.</p>
+              <p class="fragment fade-in replace-div" data-fragment-index="6">The profit is not directly related to premiums/claims.</p>
             </div>
 
               | Year | | 1 | 2 | 3
               | --- | ---| ---:|---:|---:
               | Revenue | <span class="fragment highlight-blue" data-fragment-index="3">Premium</span> | <span class="fragment highlight-blue" data-fragment-index="3">200</span> | <span class="fragment highlight-blue" data-fragment-index="3">0</span> | <span class="fragment highlight-blue" data-fragment-index="3">0</span>
               | Expense | <span class="fragment highlight-blue" data-fragment-index="3">Claims</span> | <span class="fragment highlight-blue" data-fragment-index="3">10</span> | <span class="fragment highlight-blue" data-fragment-index="3">20</span> | <span class="fragment highlight-blue" data-fragment-index="3">50</span>
-              | | <span class="fragment strike semi-fade-out" data-fragment-index="4">Change in Reserves</span> | <span class="fragment strike semi-fade-out" data-fragment-index="4">100</span> | <span class="fragment strike semi-fade-out" data-fragment-index="4">-40</span> | <span class="fragment strike semi-fade-out" data-fragment-index="4">-60</span>
+              | | <span class="fragment fade-out" data-fragment-index="5"><span class="fragment strike semi-fade-out" data-fragment-index="4">Change in Reserves</span></span> | <span class="fragment fade-out" data-fragment-index="5"><span class="fragment strike semi-fade-out" data-fragment-index="4">100</span></span> | <span class="fragment fade-out" data-fragment-index="5"><span class="fragment strike semi-fade-out" data-fragment-index="4">-40</span></span> | <span class="fragment fade-out" data-fragment-index="5"><span class="fragment strike semi-fade-out" data-fragment-index="4">-60</span></span>
               | <div class="replace-container"><span class="fragment fade-out span-inline-block" data-fragment-index="1">Total Profit</span> <span class="fragment fade-in replace-div-wide span-inline-block csm" data-fragment-index="1">Change in CSM</span> | | 90 | 20 | 10
 
           </script>
